# BazelError

./: WORKSPACE  bazel-BazelSampleError  bazel-bin  bazel-out  bazel-testlogs
BazelSample2/: BUILD.bazel  Info.plist
BazelSample2/Source/: BazelSample2.h  MyBazelSample2.swift
BazelSample2/Tests/: BazelSample2Tests.swift  Info.plist
BazelSampleError/: BUILD.bazel  Info.plist
BazelSampleError.xcodeproj/: project.pbxproj
BazelSampleError.xcodeproj/project.xcworkspace/xcuserdata/gabija.xcuserdatad/: UserInterfaceState.xcuserstate
BazelSampleError.xcodeproj/xcuserdata/gabija.xcuserdatad/xcschemes/: xcschememanagement.plist
BazelSampleError/Source/: BazelSampleError.h  MyBazelSampleError.swift
BazelSampleError/Source/en.lproj/: Localizable.strings
