load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_group")

apple_resource_group(
    name = "ResGroup",
    structured_resources = glob(["Source/*.lproj/*"]),
)

apple_framework(
    name = "BazelSampleError",
    module_name = "BazelSampleError",
    srcs = glob([
        "Source/*.swift",
    ]),
    data = glob([
        ":ResGroup",
    ]),
    visibility = ["//visibility:public"],
    platforms = {"ios": "15.2"},
    alwayslink = True,
    link_dynamic = 1,
    infoplists = [":Info.plist"],
    bundle_id = "gabija.BazelSampleError",
)